--- a/my-personal-web-site/index.html
+++ b/my-personal-web-site/index.html
@@ -13,7 +13,7 @@
 
 <table cellspacing = "1" border = "0">
     <tr>
-      <td>  <img src="./nurr.jpg" alt="Profile picture"></td>
+      <td>  <img src="./profilp.jpg" alt="Profile picture"></td>
       <td>
          <h1>Nur Karacabey</h1>
         <p><em> I am student and web developer</em></p>
